mesa (7.11.1-1) UNRELEASED; urgency=low

  * New upstream release.

 -- Sven Joachim <svenjoac@gmx.de>  Wed, 23 Nov 2011 11:06:15 +0100

mesa (7.11-6) unstable; urgency=low

  [ Julien Cristau ]
  * Inline what's left of debian/scripts/choose-configs in debian/rules.
  * Enable texture-float for dri (closes: #635651).
  * Update from upstream's 7.11 branch (commit e7794048)
  * Merge changes from 7.10.3-4, including:
    - Fix comments in libegl1-mesa.symbols to avoid impending FTBFS with the
      upcoming dpkg-dev 1.16.1 (closes: #642690)

  [ Cyril Brulebois ]
  * Document the symlink dance in README.source.

 -- Cyril Brulebois <kibi@debian.org>  Sat, 24 Sep 2011 20:32:55 +0200

mesa (7.11-5) unstable; urgency=low

  * Merge patch from Pino Tiscano (thanks!):
    - Use hurd-any instead of: hurd-i386 (“wildcard archs are free”).
    - Use any-i386 instead of: i386 kfreebsd-i386 hurd-i386.
    - Rewrite a check in debian/rules to follow the same logic.
    - Switch libgbm1-dbg to arch: linux-any. This fixes uninstallability
      on kfreebsd-* by getting rid of this package there.
    - Switch libglapi-mesa{,-dbg} arch: any. This fixes the FTBFS on
      hurd-i386^Wany.

 -- Cyril Brulebois <kibi@debian.org>  Sun, 28 Aug 2011 19:07:48 +0200

mesa (7.11-4) unstable; urgency=low

  * Use xz compression for dbg packages.
  * Simplify dh_strip calls a bit using make variables.
  * libgbm-dev is also linux-only, not just libgbm1.

 -- Julien Cristau <jcristau@debian.org>  Sat, 27 Aug 2011 12:02:42 +0200

mesa (7.11-3) unstable; urgency=low

  * Don't build libgbm on kfreebsd, it needs KMS/udev.
  * Build/ship r300g on all Linux architectures, not just x86.

 -- Julien Cristau <jcristau@debian.org>  Fri, 26 Aug 2011 11:04:45 +0200

mesa (7.11-2) unstable; urgency=low

  * Work around the lack of O_CLOEXEC on kfreebsd, fix FTBFS.
  * Don't crash on BadRequest from DRI2Connect, just fall back to sw or
    indirect.
