@@ -1,6 +1,8 @@
 mesa (7.11.1-1) UNRELEASED; urgency=low
 
   * New upstream release.
+  * Move the Nouveau drivers to the libgl1-mesa-dri package
+    (Closes: #645239).
 
  -- Sven Joachim <svenjoac@gmx.de>  Wed, 23 Nov 2011 11:06:15 +0100
 
